[gd_scene load_steps=9 format=3 uid="uid://d28is7bi36ymm"]

[ext_resource type="Script" path="res://elements/enemy/enemy.gd" id="1_hv720"]
[ext_resource type="Texture2D" uid="uid://dw8lnlmop0cyd" path="res://assets/chars/Enemy.png" id="2_4dlf2"]
[ext_resource type="AudioStream" uid="uid://vudlnhbnuau6" path="res://assets/sound/Suck 2.wav" id="3_c8fx6"]
[ext_resource type="AudioStream" uid="uid://clplygs6kh6px" path="res://assets/sound/Hit damage 1.wav" id="4_kv4on"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pwi43"]
atlas = ExtResource("2_4dlf2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlb3n"]
atlas = ExtResource("2_4dlf2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_66vbq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwi43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlb3n")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ci47e"]
radius = 5.0

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
self_modulate = Color(1, 1, 1, 0)
z_index = 1
collision_layer = 4
collision_mask = 2
script = ExtResource("1_hv720")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_66vbq")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.514196

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_ci47e")

[node name="RayCastLeft" type="RayCast2D" parent="."]
z_index = 1
position = Vector2(0, -1)
target_position = Vector2(-12, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
z_index = 1
position = Vector2(0, -1)
target_position = Vector2(12, 0)

[node name="DiePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_c8fx6")
volume_db = -10.0

[node name="ShotPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_kv4on")
